--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -189,18 +189,36 @@
 
     <div class="box">
         <h1>Виды работ:</h1>
-        <div id="text1">
+        <div id="text1" class="text">
+            <h3>Вынос границ земельного участка</h3>
+            <p>Вынос границ земельного участка в натуру — это процедура, в ходе которой на конкретном земельном наделе устанавливаются межевые знаки для обозначения его границ. Она является разновидностью геодезических работ, в результате проведения которых на участке устанавливаются и закрепляются межевые знаки. Происходит это в соответствии с документами и данными, которые содержатся в Едином государственном  реестре недвижимости.</p>
+        </div>
+
+        <div id="text2" class="text">
+            <h3>Подсчет объемов земляных масс</h3>
+            <p>Данный вид геодезических работ выполняется для определения фактического объема сыпучего строительного материала(песок, щебень, грунт и т.д.), который находится на площадке складирования, а так же для определения объемов разработанного или отсыпанного грунта механизированным способом.</p>
+        </div>
+        <div id="text3" class="text">
+            <h3>Гидрографические работы</h3>
+            <p>Инженерно – гидрографические работы - это комплекс изыскательских работ, позволяющих получить данные о ситуации, рельефе и водной поверхности для составления топографических планов и профилей водных объектов (русел рек, акваторий водохранилищ, озер, прибрежной части морей и прилегающей к ним части берега, со всеми их характерными особенностями).</p>
+        </div>
+        <div id="text4" class="text">
+            <h3>Аэрофотосъёмка</h3>
+            <p>Основная область применения аэрофотосъёмки - это топография и геодезические работы. С помощью БПЛА проводят аэрофотосъемку земельных ресурсов, карьеров и различных строений. Для геодезической аэрофотосъемки используются высокоточные летательные аппараты, оснащенные специальной аппаратурой фото и видео фиксации. Наша компания имеет собственный парк профессиональных летательных аппаратов позволяющих с высокой точностью выполнять данные задачи.</p>
+        </div>
+
+        <!-- <div id="text1">
             <h3>Межевание</h3>
             <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
-        </div>
-        <div id="text2">
+        </div> -->
+        <!-- <div id="text2">
             <h3>Топоплан</h3>
             <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
-        </div>
-        <div id="text3">
+        </div> -->
+        <!-- <div id="text3">
             <h3>Сопровождение</h3>
             <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
-        </div>
+        </div> -->
     </div>
 
     <div (click)="arrowLeftTwo()" class="arrow-left">
@@ -253,8 +271,11 @@
         <p>ОГРН: 1126194004100</p>
         <p>ИНН: 6168059100</p>
     </div>
+    <div class="certificate">
+        <p>Право ООО "Геометрикс" осуществлять на территории РФ инженерно-геодезические работы подтверждается <a href="certificate">свидетельством № 0230.04-2012-6168059100-И-020</a> от «09» февраля 2015 г., выданном СРО НП «Объединение Изыскателей Южного и Северо-Кавказского округов».</p>
+    </div>
     <div class="privacy">
         <a href="privacy">Политика конфиденциальности</a>
-        <!-- <a routerLink="privacy" queryParams="d" fragment="politics" routerLinkActive="activebutton">Политика конфиденциальности</a> -->
+        <!-- <a routerLink="privacy" queryParams="d" fragment="politics" routerLinkActive="activebutton">Политика конфиденциальности</a> -->                
     </div>
 </footer>
