--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -955,9 +955,11 @@ h1 {
 }
 @media (max-width: 570px) {
     .reason {
+        height: 650px;
         h1 {
             top: 10px;
             line-height: 1.8rem;
+            font-size: 1.8rem;
         }
         .reason-img-one {
             display: none;
@@ -969,7 +971,7 @@ h1 {
 }
 @media (max-width: 420px) {
     .reason { 
-        height: 650px;
+        height: 700px;
         h1 {
             top: 10px;
             padding: 5px;
@@ -984,7 +986,7 @@ h1 {
 }
 @media (max-width: 350px) {
     .reason {
-        height: 700px;
+        height: 750px;
     }
 }
 @media (max-width: 300px) { // < 300
@@ -1004,7 +1006,7 @@ h1 {
     justify-content: center;
     width: 100%;
     
-    height: 600px;
+    height: 700px;
     background: $dark;
     color: $white;
 
@@ -1015,7 +1017,7 @@ h1 {
         align-items: center;
         justify-content: center;
         padding: 20px;
-        // height: $height-block;        
+        // height: $height-block;
         position: relative;
         h1 {
             position: absolute;
@@ -1159,6 +1161,7 @@ h1 {
 }
 @media (max-width: 350px) {
     .about-text {
+        height: 750px;
         .box {
             #text1, #text2, #text3, #text4{
                 width: 100%;
