--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -259,6 +259,7 @@
 <!-- ------------------------------ -->
 
 <footer class="footer">
+<!-- <div class="box"> -->
     <!-- <h1>footer</h1> -->
     <div class="director">
         <!-- <p>Директор:</p>
@@ -271,6 +272,13 @@
         <p>ОГРН: 1126194004100</p>
         <p>ИНН: 6168059100</p>
     </div>
+    <div class="social">
+        <label>Наши соц.сети:</label>
+        <br>
+        <a href="https://www.instagram.com/geometrix61/">Instagram</a>
+        <br>
+        <a href="https://vk.com/geometrix61">Vkontakte</a>
+    </div>
     <div class="certificate">
         <p>Право ООО "Геометрикс" осуществлять на территории РФ инженерно-геодезические работы подтверждается <a href="certificate">свидетельством № 0230.04-2012-6168059100-И-020</a> от «09» февраля 2015 г., выданном СРО НП «Объединение Изыскателей Южного и Северо-Кавказского округов».</p>
     </div>
@@ -278,4 +286,5 @@
         <a href="privacy">Политика конфиденциальности</a>
         <!-- <a routerLink="privacy" queryParams="d" fragment="politics" routerLinkActive="activebutton">Политика конфиденциальности</a> -->                
     </div>
+<!-- </div> -->
 </footer>
