add url hutoryanin site

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -286,5 +286,8 @@
         <a href="privacy">Политика конфиденциальности</a>
         <!-- <a routerLink="privacy" queryParams="d" fragment="politics" routerLinkActive="activebutton">Политика конфиденциальности</a> -->                
     </div>
+    <div class="hutoryanin" (click)="onClickDivHutoryanin()">
+        <h4>Сайт разработал <a href="https://hutoryanin.ru">ХуторянинЪ</a></h4>
+    </div>
 <!-- </div> -->
 </footer>
