add styles from #insta and #vk

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -275,9 +275,9 @@
     <div class="social">
         <label>Наши соц.сети:</label>
         <br>
-        <a href="https://www.instagram.com/geometrix61/">Instagram</a>
+        <a href="https://www.instagram.com/geometrix61/" id="insta">Инстаграм</a>
         <br>
-        <a href="https://vk.com/geometrix61">Vkontakte</a>
+        <a href="https://vk.com/geometrix61" id="vk">ВКонтакте</a>
     </div>
     <div class="certificate">
         <p>Право ООО "Геометрикс" осуществлять на территории РФ инженерно-геодезические работы подтверждается <a href="certificate">свидетельством № 0230.04-2012-6168059100-И-020</a> от «09» февраля 2015 г., выданном СРО НП «Объединение Изыскателей Южного и Северо-Кавказского округов».</p>
