add url certificate

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -280,7 +280,7 @@
         <a href="https://vk.com/geometrix61" id="vk">ВКонтакте</a>
     </div>
     <div class="certificate">
-        <p>Право ООО "Геометрикс" осуществлять на территории РФ инженерно-геодезические работы подтверждается <a href="certificate">свидетельством № 0230.04-2012-6168059100-И-020</a> от «09» февраля 2015 г., выданном СРО НП «Объединение Изыскателей Южного и Северо-Кавказского округов».</p>
+        <p>Право ООО "Геометрикс" осуществлять на территории РФ инженерно-геодезические работы подтверждается <a href="https://prospectors-sroufo.ru/reestr/registry/entry?number=230">свидетельством № 0230.04-2012-6168059100-И-020</a> от «09» февраля 2015 г., выданном СРО НП «Объединение Изыскателей Южного и Северо-Кавказского округов».</p>
     </div>
     <div class="privacy">
         <a href="privacy">Политика конфиденциальности</a>
