--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -8,13 +8,15 @@
     <img class="logo" src="assets/l.png" alt="logo">
     <img class="logo-mini" src="assets/logo.png" alt="logo">
 
-    <p class="email">geometrix61@mail.ru</p>
+    <p class="email"><a href="mailto:geometrix61@mail.ru">geometrix61@mail.ru</a></p>
     <p class="phone">
-        <img src="assets/img/social/phone.png" alt="phone"> +79081903754<br>
-        <img src="assets/img/social/phone.png" alt="phone"> +79286074999</p>
+        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:79081903754"> +79081903754</a><br>
+        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:79286074999"> +79286074999</a>
+    </p>
     
     <p class="whatsapp">
-        <img src="assets/img/social/wa.png" alt="phone"> +79044478596</p>
+        <img src="assets/img/social/wa.png" alt="phone"><a href="https://wa.me/79044478596"> +79044478596</a>
+    </p>
 </header>
 
 <div class="hr"></div>
