--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,8 +10,8 @@
 
     <p class="email"><a href="mailto:geometrix61@mail.ru">geometrix61@mail.ru</a></p>
     <p class="phone">
-        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:79081903754"> +79081903754</a><br>
-        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:79286074999"> +79286074999</a>
+        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:+79081903754"> +79081903754</a><br>
+        <img src="assets/img/social/phone.png" alt="phone"><a href="tel:+79286074999"> +79286074999</a>
     </p>
     
     <p class="whatsapp">
